--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>About photoThinking</h1>
+            <h1>About Us</h1>
           </div>
         </div>
       </div>
